# claude-code-proxy-ssy

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  build-release.sh  build.bat  build.sh  create-release.sh  docker-compose.yml  go.mod  go.sum  install.sh  main.go  main_server.go  pyproject.toml  requirements.txt  run_app.bat  run_app.sh  run_docker.bat  run_docker.sh
.github/workflows/: release.yml
cmd/cli/: main.go
docs/: mapping.md
internal/cli/: config.go  json_config.go  log_manager.go  models.go  prompts.go  service.go
internal/config/: config.go
internal/handlers/: handlers.go
internal/middleware/: middleware.go
internal/models/: anthropic.go  errors.go
internal/server/: server.go
internal/services/: conversion.go  model_selector.go  openai_client.go  streaming.go  token_counting.go
src/: main.py
src/api/: middleware.py  routes.py
src/config/: settings.py
src/models/: anthropic.py  errors.py
src/services/: conversion.py  streaming.py  token_counting.py
src/utils/: logging.py
